# TDengine

include/common/: systable.h  tglobal.h  tmsg.h  tmsgdef.h  ttokendef.h
include/dnode/arbitrator/: arbitrator.h
include/libs/nodes/: cmdnodes.h  querynodes.h
include/util/: taoserror.h  tdef.h  tlog.h
source/common/src/: systable.c  tglobal.c  tmsg.c
source/dnode/: CMakeLists.txt
source/dnode/arbitrator/: CMakeLists.txt
source/dnode/arbitrator/inc/: arbInt.h
source/dnode/arbitrator/src/: arbitrator.c  arbitratorOpen.c
source/dnode/mgmt/: CMakeLists.txt
source/dnode/mgmt/mgmt_arbitrator/: CMakeLists.txt
source/dnode/mgmt/mgmt_arbitrator/inc/: arbmInt.h
source/dnode/mgmt/mgmt_arbitrator/src/: arbmFile.c  arbmHandle.c  arbmInt.c  arbmWorker.c
source/dnode/mgmt/mgmt_dnode/src/: dmHandle.c  dmWorker.c
source/dnode/mgmt/mgmt_mnode/src/: mmHandle.c
source/dnode/mgmt/node_mgmt/: CMakeLists.txt
source/dnode/mgmt/node_util/: CMakeLists.txt
source/libs/command/src/: command.c
source/libs/executor/src/: cachescanoperator.c  executil.c  projectoperator.c
source/libs/function/src/: builtinsimpl.c
source/libs/nodes/src/: nodesCloneFuncs.c  nodesCodeFuncs.c  nodesMsgFuncs.c
source/libs/parser/inc/: parAst.h  sql.y
source/libs/parser/src/: parAstCreater.c  parAstParser.c  parAuthenticator.c  parTokenizer.c  parTranslater.c  sql.c
source/libs/planner/src/: planOptimizer.c
source/libs/scalar/src/: scalar.c
source/util/src/: terror.c  tlog.c
tests/parallel_test/: cases.task
tests/system-test/2-query/: last.py  last_and_last_row.py
(+27 files in other folders)
